Thu Dec 24 10:49:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/ping/run_test.pl
        * protocols/tests/HTBP/Reactor_Tests/run_test.pl
        * protocols/tests/HTBP/Send_Large_Msg/run_test.pl
        * protocols/tests/HTBP/Send_Recv_Tests/run_test.pl
        * tests/run_test.pl
          Fixed fuzz

Thu Dec 24 10:20:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Bool_Array.h:
        * apps/gperf/src/Key_List.h:
          Fixes for C++ Builder 2010 Update 4/5

Thu Dec 24 09:54:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_string.cpp:
          Const changes, layout changes, call ACE_OS::strncat instead of
          strncat directly

        * ace/Log_Msg.cpp:
        * ace/Log_Msg.h:
          Const changes

        * ace/config-win32-borland.h:
          C++ Builder 2010 has a broken wcsncat, reported as QC80630, for
          this version we now enable the ACE emulation for wcsncat

        * ace/OS_NS_wchar.cpp:
          Initialise some pointers with 0

Mon Dec 21 11:29:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fixed error message and added a test for generated file headers

Mon Dec 21 11:26:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/bootstrap:
          Invoke autoupdate as part of this script

Sun Dec 20 07:58:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/checked_iterator.h:
          stl port doesn't have a checked iterator. This fixes bugzilla
          3799 and 3420. Thanks to <sailzeng at tencent dot com> and
          Mark Hebbel <Mark dot Hebbel at baslerweb dot com> for
          reporting this

Fri Dec 18 17:40:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added IgnoreHostRoot

Fri Dec 18 12:55:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>
